--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </div>
       <div class="category-select">
         <select name="cat" id="cat">
+          <option value="0">Choose Country</option>
           <option value="1">Japan</option>
           <option value="2">China</option>
           <option value="3">South Korea</option>
@@ -135,7 +136,7 @@
     </section>
   </section>
   <footer class="footer">
-    <div class="footer-text"></div>
+    <div class="footer-text"><p>Developer by <a target=”_blank” href="http://aprendiendoingenieria.es/juan-carlos-contreras-marquez/" class="">Juan Carlos Contreras</a></p></div>
   </footer>
 </body>
 
