Brand name correction

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header in-row">
       <div class="site-branding">
         <a href=""><h1 class="site-name">rising sun</h1></a>
-        <p class="autor">An trip through oriental countries</p>
+        <p class="autor">A trip through oriental countries</p>
       </div>
       <div class="menu-button">
           <img src="Images/menu-icon.png" alt="Hamburguer Button">
